--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            Seattle, WA<br>
+            WA<br>
             USA
             </p>
 
@@ -1049,7 +1049,7 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>pv.groups999 [AT] gmail.com</p>
+   			<p> [AT] gmail.com</p>
 
    		</div>
 
@@ -1061,7 +1061,7 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>(+1) 512 666 7133</p>
+   			<p>(+1) </p>
 
    		</div>
 
@@ -1088,7 +1088,7 @@
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright Prashant Verma 2016</span>
+		        	<span>© Copyright Prashant Verma 2018</span>
 		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
 		         </div>
 	      	</div>
